--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,6 +11,5 @@
 # column: value
 
 user_001:
-  id: 1
-  email: abc@gmail.com
-  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
+  email: 'abc@gmail.com'
+  encrypted_password: '123456'
